Fixed spacing of titltitle (Main Title)

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -93,10 +93,17 @@ li{
 }
 
 #titletitle{
-
-font-family: 'Raleway', sans-serif;
-    /*font-family: "LeagueSpartan-Bold"; */
+    margin: 0 auto;
+    font-family: "LeagueSpartan-Bold";
     -webkit-animation-delay: 0s;
+}
+
+#titletitle img {
+  height: 95%;
+  vertical-align: middle;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #head-title{
